# Margins-Bookapp

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: bookmarks.py  books.py  progress.py  uploads.py
backend/app/auth/: deps.py  jwt.py
backend/app/db/: models.py  session.py
backend/app/schemas/: book.py  bookmark.py  progress.py
backend/app/services/: bookmarks.py  books.py  progress.py  storage.py  uploads.py
backend/migrations/: env.py
backend/migrations/versions/: 48a78f32c39f_enable_rls.py  ff14c3b9b1d4_initial_schema.py
backend/scripts/ingest/: enrich_openlibrary.py  gutendex.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/sign-in/: page.tsx
frontend/app/(auth)/sign-up/: page.tsx
frontend/app/(main)/: error.tsx  layout.tsx
frontend/app/(main)/book/[id]/: error.tsx  loading.tsx  page.tsx
frontend/app/(main)/my-books/: page.tsx
frontend/app/(main)/read/[id]/: EpubReader.tsx  ReaderSettings.tsx  page.tsx
frontend/components/my-books/: UploadPanel.tsx
frontend/lib/api/: books.ts  client.ts  progress.ts  server.ts  uploads.ts
