[project]
name = "margins-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "ebooklib>=0.18",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.10",
    "supabase>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "boto3-stubs[s3]>=1.35.0",
    "types-python-jose>=3.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["B008"]  # FastAPI uses Depends() in function signatures by design

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"scripts/**" = ["ANN"]
"migrations/**" = ["ANN", "F401", "E501", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ebooklib.*", "jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
